k8s/discounts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts
  namespace: restauranty
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discounts
  template:
    metadata:
      labels:
        app: discounts
    spec:
      containers:
        - name: discounts
          image: otigerald/restauranty-discounts:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          readinessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: discounts-service
  namespace: restauranty
spec:
  selector:
    app: discounts
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
